# BinanceHistoricDataFetcher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  docker-compose.yaml
app/: main.cpp
app/archiver/: main.cpp
app/cli/: main.cpp
app/live/: main.cpp
docs/: DATAGRAM_MSG.md  TODO.md
include/binancehistoricaldatafetcher/: HistoricalDataProcessor.h  binance_futures_book_builder.h  binance_futures_orderbook.h  binance_futures_orderbook_snapshots_socket_client.h  binance_futures_socket_client.h  binance_market_data_models.h  binance_orderbook.h  constants.h  file_downloader.h  market_data_publisher.h  multi_symbol_orderbook.h  orderbook.h  orderbook_archiver.h  processor.h  questdb_writer.h  settings.h  writer.h
include/common/: macros.h
include/common/io/: questdb_writer.h  writer.h
include/common/models/: common_data_models.h  enums.h  multi_symbol_orderbook.h  orderbook.h  types.h
include/common/network/socket/: multicast_server.h  utils.h
include/common/rounding/: fixed_point.h
include/common/sync/: producer_consumer.h
src/: binance_futures_book_builder.cpp  binance_futures_order_book_snapshot_socket_client.cpp  binance_futures_orderbook.cpp  file_downloader.cpp  market_data_publisher.cpp  multicast_server.cpp  orderbook_archiver.cpp  processor.cpp  questdb_writer.cpp  settings.cpp  writer.cpp
src/binance/: HistoricalDataProcessor.cpp  binance_futures_book_builder.cpp  binance_futures_order_book_snapshot_socket_client.cpp  binance_futures_orderbook.cpp  file_downloader.cpp  market_data_publisher.cpp  orderbook_archiver.cpp
src/common/: enums.cpp  multicast_server.cpp  questdb_writer.cpp  writer.cpp
